# rk_repo

./: .gitignore  LICENSE  README.md  extract_pdf.py  merge_notes.py
app/: .env.example  .gitignore  README.md  pyproject.toml  run.bat
app/app/: config.py  db.py  main.py  models.py
app/app/data/: case_templates.py  essay_topics.py
app/app/llm/: client.py  prompts.py
app/app/rag/: chunker.py  ingest.py  retriever.py
app/app/routers/: ai.py  cards.py  cases.py  essays.py  export.py  mock.py  notes.py  questions.py  quiz.py  stats.py
app/app/srs/: scheduler.py
app/app/templates/: _card_panel.html  _chapter_sidebar.html  _mock_timer.html  _quiz_feedback.html  _quiz_question.html  ai_chat.html  base.html  card_new.html  card_review.html  case_attempt.html  case_result.html  cases_index.html  essay_result.html  essay_topic.html  essays_index.html  index.html  mock_case.html  mock_empty.html  mock_essay.html  mock_index.html  mock_mcq.html  mock_result.html  notes_chapter.html  notes_index.html  questions_index.html  questions_review.html  quiz_empty.html  quiz_index.html  quiz_results.html  quiz_session.html  stats.html
app/scripts/: seed_chapters.py  seed_demo_questions.py  verify_p1.py
docs/: GIT_PUSH.md  SETUP.md
